# Larrick_multi

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING_TESTS.md  README.md  doe_results.pkl  pareto_F.npy  pareto_G.npy  pareto_X.npy  pyproject.toml  repo_layout.yml  requirements-external.txt  requirements-integration.txt  run_full_doe.py  sensitivity_analysis.json  summary.json  verify_kinematics.py
.cursor/: worktrees.json
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: analysis.yml  cem-orchestration.yml  ci-telemetry.yml  ci.yml  layout.yml  openfoam-custom-solver-smoke.yml  optimization.yml  reusable-fast.yml  simulation.yml  training.yml  verify_dual_opt.yml
.task-runtime/: task.env
Docs/: connection_contract_v1.json  dress-rehearsal-process.md  explore-exploit-principles-mode.md  github_admin_hardening_checklist.md  machining-model-migration.md  main-development-plan.md  merge_wave1_manifest.md  multi-objective-production-runbook.md  thermo-symbolic-hardening-runbook.md  workflow-branch-policy.md
Docs/legacy_docs/: README.md  legacy_feature_inventory.md
Docs/sources/: README.md
GUI/: .editorconfig  .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
GUI/data-litvin/: build.gradle.kts
GUI/desktop/: .editorconfig  README.md  build.gradle.kts
GUI/docs/: gui_frontend_scope.md  larrak_dependency_mapping.md
GUI/scripts/: kotlin_bridge_cli.py
data/cem/: life_damage_calibration_v1.json  limit_stress_numbers.csv  material_route_cloud.csv  route_metadata.csv  temperature_curves.csv
data/simulation_validation/: chem323_ignition_entry_cold_lowp_corpus_stub.json  chem323_ignition_entry_ho2_diag_authority_miss.json  engine_runtime_mechanism_strategy.json  engine_runtime_mechanism_strategy_multitable_v1.json  openfoam_runtime_chemistry_table_chem323_ignition_branch.json  openfoam_runtime_chemistry_table_chem323_ignition_entry.json  openfoam_runtime_chemistry_table_chem323_ignition_hot_core.json  openfoam_runtime_chemistry_table_chem323_ignition_ramp.json  openfoam_runtime_chemistry_table_chem323_ignition_tail.json  tuning_knob_schema_chem323_ignition_entry_v1.json  v66_engine_restart_recipe.json  v66_frontier_audit_ignition_entry.txt  v66_multitable_refresh_order.md  v66u_coverage_corpus_analysis_snapshot.json  v66w_ch2s_reject_localization.json  v66w_coverage_corpus_analysis_snapshot.json
data/surrogate_v1/: training_data.npz
data/thermo/: anchor_manifest_v1.json  hybrid_chemistry_profile_v1.json  literature_constants_manifest_v1.json  literature_constants_v1.json  valve_timing_profile_v1.json
larrak2/: README.md  pareto_F.npy  pareto_X.npy  repo_layout.yml  summary.json
larrak2/data_temp/: train.npz
larrak2/diagnostic_nsga3_v1/: pareto_F.npy  pareto_G.npy  pareto_X.npy  pareto_metrics.json  run_summary.json
larrak2/diagnostic_results/: constraint_dist.csv  generation_stats.csv  pareto_front.csv  run_summary.json
larrak2/diagnostic_results_v2/: constraint_dist.csv  generation_stats.csv  pareto_X.npy  pareto_front.csv  run_summary.json
larrak2/diagnostic_results_v3/: generation_stats.csv  run_summary.json
larrak2/diagnostic_results_v4/: constraint_dist.csv  generation_stats.csv  pareto_front.csv  run_summary.json
larrak2/results_staged_diagnostic/: archive.json  staged_summary.json
larrak2/scripts/: check_repo_layout.py  gen_surrogate_data.py  gen_surrogate_data_scavenge.py  run_pareto_staged.py  sensitivity_analysis.py  train_surrogate_gear.py  train_surrogates.py
larrak2/tests/: test_constraints_sign.py  test_encoding_roundtrip.py  test_hifi_adapters.py  test_pareto_3obj.py  test_pareto_fidelity1.py  test_pareto_staged.py  test_promotion.py  test_surrogate_integration.py  test_v1_port_determinism.py  test_v1_port_smoke.py
legacy_docs/: src_migration_map.md
models/surrogate_v1/: model_gear.pkl  model_scavenge.pkl
openfoam_custom_solvers/larrakEngineFoam/: larrakEngineFoam.C
scripts/: agent_run.sh  check_repo_layout.py  diagnostic_pareto_run.py  gen_surrogate_data.py  gen_surrogate_data_gear.py  gen_surrogate_data_scavenge.py  generate_larrak2_facades.py  install_external_larrak.sh  larrick_gui_bridge.py  run_active_learning.py  run_openfoam_doe.py  run_pareto_nsga3.py  run_pareto_staged.py  run_v66_engine_restart_benchmark.py  sensitivity_analysis.py  start_parallel_task.sh  train_surrogate_gear.py  train_surrogate_scavenge.py  train_surrogates.py  verify_paths.py
scripts/worktree_agent/: README.md  branch_policy_guard.sh  platform_adapter.template.json  pre_pr_checks.sh  worktree_bootstrap.sh
src/: summary.json
src/larrak2/: __init__.py  paths.py
src/larrak_optimization/: __init__.py
src/larrak_runtime/: __init__.py
tests/: conftest.py  test_archive_guard.py  test_archive_metadata.py  test_constraints_sign.py  test_determinism.py  test_dual_optimization_ci.py  test_loss_modularity.py  test_pareto_3obj.py  test_pareto_fidelity1.py  test_pareto_staged.py  test_ratio_profile_continuity.py  test_ratio_profile_gating.py  test_refinement_metadata.py  test_refinement_robustness.py  test_repo_layout.py  test_smoke_eval.py  test_v1_port_bounds.py  test_v1_port_smoke.py
tests/ci/: test_agent_docs.py  test_architecture_contracts.py  test_archive_guard.py  test_archive_metadata.py  test_archive_migration.py  test_artifact_path_guard.py  test_artifact_paths_fidelity_resolution.py  test_candidate_store.py  test_constraints_sign.py  test_coverage_corpus_analysis.py  test_dataset_registry.py  test_determinism.py  test_docker_openfoam.py  test_dress_rehearsal.py  test_encoding_roundtrip.py  test_engine_calibration.py  test_engine_restart_benchmark.py  test_engine_results.py  test_engine_runtime_mechanism.py  test_explore_exploit_cli_smoke.py  test_explore_exploit_pipeline.py  (+78 more)
tools/: analyze_partial_results.py  build_llnl_gasoline_yaml.py  build_thermo_anchor_manifest.py  diagnose_llnl_flame_speed.py  migrate_machining_model.py  replace_larrak2_shims.py  run_full_doe.py  shim_manifest_larrak2.json  train_machining_surrogate.py
(+567 files in other folders)
