[project]
name = "larrak2"
version = "0.1.0"
description = "Multi-objective Pareto optimization for thermo-gear systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pymoo>=0.6",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy-stl>=3.0",
    "torch>=2.0",
    "scikit-learn>=1.0",
    "larrak-core @ git+https://github.com/LarrickCamPro/larrak-core.git@3fd949e4f41bd5c5f2a0e825fca2118fe301d235",
    "larrak-engines @ git+https://github.com/LarrickCamPro/larrak-engines.git@dcaa763baef5ba870db16038e9cbc832e24c13fe",
    "larrak-simulation @ git+https://github.com/LarrickCamPro/larrak-simulation.git@6b19e38fd41a6385555ed74bb9d671821cc75506",
    "larrak-optimization @ git+https://github.com/LarrickCamPro/larrak-optimization.git@9e1fd892426ba8f86c171119419be3e1b879e023",
    "larrak-analysis @ git+https://github.com/LarrickCamPro/larrak-analysis.git@c6fc3286a17bd7ad0ec8571b2076564d83ff31b3",
    "larrak-orchestration @ git+https://github.com/LarrickCamPro/larrak-orchestration.git@b94e702b7d5953550004979233072c6f14fa61a0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1", "mypy>=1.0"]
combustion = ["cantera>=3.0"]
casadi = ["casadi>=3.6"]
deap = ["deap>=1.3"]
orchestration = ["redis>=5.0", "weaviate-client>=4.0"]

[project.scripts]
larrak-run = "larrak2.cli.run:main"
larrak-gen = "larrak2.cli.generate:main"
larrak-train = "larrak2.cli.train:main"
larrak-validate = "larrak2.cli:validate_main"
larrak-validate-sim = "larrak2.cli:validate_simulation_main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = []

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/ci_contract"]
norecursedirs = ["tests/dev"]
python_files = "test_*.py"
